# grc-grazing-intel

./: .gitignore  .markdownlint-cli2.jsonc  Dockerfile  README.md  build_reference_db.py  package-lock.json  pasture_reference.db  pyproject.toml  sample_boundary.geojson  sample_boundary_east.geojson  sample_boundary_south.geojson  sample_herds_pasturemap.json  schema.sql
.github/workflows/: ci.yml
airflow/dags/: grazing_intel_dag.py
docs/: CICD_Design_task5.md  architecture.md  cicd.md  grazing-intel-visualization-design-task-04.md  grazing_intel_visualization_design_task4.md  runbook.md  ui_wireframe.md  versioning-task-06.md  versioning_task6.md
docs/part1/: architecture-diagram-deliverable.md  ci-cd-design-task-05.md  deliverable-01-README.md  deliverable-02-architecture-diagram.md  operational-maturity-task-07.md  runbook-deliverable.md  task-01-data-ingestion.md  task-02-model-deployment.md  task-03-validation-monitoring.md  task-07-operational-maturity.md
docs/part2/: deliverable-01-credit-verification-design.md  deliverable-02-credit-verification-dataflow-diagram.md  deliverable-03-ranch-verification-record.schema.yaml
src/grc_pipeline/: cli.py  config.py  runtime.py  timeutil.py
src/grc_pipeline/api/: app.py
src/grc_pipeline/ingest/: boundary.py  features.py  herd.py  openmeteo.py
src/grc_pipeline/logic/: days_remaining.py
src/grc_pipeline/quality/: checks.py  monitoring.py
tests/: test_compute_idempotent.py  test_features.py  test_logic.py  test_monitoring.py  test_quality.py  test_task3_checks.py  test_task6_versioning.py
(+2 files in other folders)
